; ModuleID = '/home/carl/AnghaBench/redis/src/extr_config.c_rewriteConfigBindOption.c'
source_filename = "/home/carl/AnghaBench/redis/src/extr_config.c_rewriteConfigBindOption.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i64, i32 }
%struct.rewriteConfigState = type { i32 }

@.str = private unnamed_addr constant [5 x i8] c"bind\00", align 1
@server = common dso_local global %struct.TYPE_2__ zeroinitializer, align 8
@.str.1 = private unnamed_addr constant [2 x i8] c" \00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @rewriteConfigBindOption(%struct.rewriteConfigState* %0) #0 {
  %2 = alloca %struct.rewriteConfigState*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  store %struct.rewriteConfigState* %0, %struct.rewriteConfigState** %2, align 8
  store i32 1, i32* %3, align 4
  store i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0), i8** %6, align 8
  %7 = load i64, i64* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @server, i32 0, i32 0), align 8
  %8 = icmp eq i64 %7, 0
  br i1 %8, label %9, label %13

9:                                                ; preds = %1
  %10 = load %struct.rewriteConfigState*, %struct.rewriteConfigState** %2, align 8
  %11 = load i8*, i8** %6, align 8
  %12 = call i32 @rewriteConfigMarkAsProcessed(%struct.rewriteConfigState* %10, i8* %11)
  br label %31

13:                                               ; preds = %1
  %14 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @server, i32 0, i32 1), align 8
  %15 = load i64, i64* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @server, i32 0, i32 0), align 8
  %16 = call i32 @sdsjoin(i32 %14, i64 %15, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.1, i64 0, i64 0))
  store i32 %16, i32* %5, align 4
  %17 = load i8*, i8** %6, align 8
  %18 = call i32 @sdsnew(i8* %17)
  store i32 %18, i32* %4, align 4
  %19 = load i32, i32* %4, align 4
  %20 = call i32 @sdscatlen(i32 %19, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.1, i64 0, i64 0), i32 1)
  store i32 %20, i32* %4, align 4
  %21 = load i32, i32* %4, align 4
  %22 = load i32, i32* %5, align 4
  %23 = call i32 @sdscatsds(i32 %21, i32 %22)
  store i32 %23, i32* %4, align 4
  %24 = load i32, i32* %5, align 4
  %25 = call i32 @sdsfree(i32 %24)
  %26 = load %struct.rewriteConfigState*, %struct.rewriteConfigState** %2, align 8
  %27 = load i8*, i8** %6, align 8
  %28 = load i32, i32* %4, align 4
  %29 = load i32, i32* %3, align 4
  %30 = call i32 @rewriteConfigRewriteLine(%struct.rewriteConfigState* %26, i8* %27, i32 %28, i32 %29)
  br label %31

31:                                               ; preds = %13, %9
  ret void
}

declare dso_local i32 @rewriteConfigMarkAsProcessed(%struct.rewriteConfigState*, i8*) #1

declare dso_local i32 @sdsjoin(i32, i64, i8*) #1

declare dso_local i32 @sdsnew(i8*) #1

declare dso_local i32 @sdscatlen(i32, i8*, i32) #1

declare dso_local i32 @sdscatsds(i32, i32) #1

declare dso_local i32 @sdsfree(i32) #1

declare dso_local i32 @rewriteConfigRewriteLine(%struct.rewriteConfigState*, i8*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
